Fixed layout issues and improved about me section

--- a/src/App.css
+++ b/src/App.css
@@ -23,7 +23,7 @@ body {
   height: 100%;
 }
 
-@media only screen and (max-width: 650px) {
+@media only screen and (max-width: 1000px) {
   .inside-particles-container {
     margin-top: 60px;
   }
