--- a/src/components/NavBar/styles.css
+++ b/src/components/NavBar/styles.css
@@ -72,7 +72,7 @@
   display: none;
 }
 
-@media screen and (max-width: 650px) {
+@media screen and (max-width: 1000px) {
   .navbar-item {
     position: relative;
   }
