--- a/src/components/WaveAlert/style.css
+++ b/src/components/WaveAlert/style.css
@@ -14,10 +14,10 @@
   border: 1px black;
   border-radius: 20px;
   text-align: center;
-  max-width: 350px;
-  min-width: 200px;
+  width: 30%;
   min-height: 320px;
-  width: 100%;
+  max-height: 360px;
+  max-width: 400px;
   background-color: white;
   transition: box-shadow 0.5s;
   will-change: transform;
